<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vblack"

    tools:context="com.liminal.project32.CustomerProfile">


    <ImageView
        android:id="@+id/menu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/menuIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:tint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="@+id/menu"
        app:layout_constraintStart_toStartOf="@+id/menu"
        app:layout_constraintTop_toTopOf="@+id/menu"
        app:srcCompat="@drawable/menu" />


    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:onClick="pickImage"
        android:tint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image2" />


    <TextView
        android:id="@+id/profileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caviar_dreams"
        android:text="@string/profilePic"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/profilePic"
        app:layout_constraintEnd_toEndOf="@+id/profilePic"
        app:layout_constraintStart_toStartOf="@+id/profilePic"
        app:layout_constraintTop_toTopOf="@+id/profilePic" />


    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:fontFamily="@font/caviar_dreams"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="@color/blue"
        android:textColorHint="@color/tblue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePic" />


    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:fontFamily="@font/caviar_dreams"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textWebPassword"
        android:textColor="@color/blue"
        android:textColorHint="@color/tblue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />


    <EditText
        android:id="@+id/pass"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:fontFamily="@font/caviar_dreams"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/blue"
        android:textColorHint="@color/tblue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />


    <Button
        android:id="@+id/addCard"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_b"
        android:fontFamily="@font/caviar_dreams"
        android:text="@string/add_card"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />


</androidx.constraintlayout.widget.ConstraintLayout>