<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vblack"

    tools:context="com.liminal.project32.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/caviar_dreams"
        android:text="Garçon"
        android:textColor="@color/blue"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:alpha=".7"
        android:background="@drawable/rounded"
        android:ems="10"
        android:fontFamily="@font/caviar_dreams"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/blue"
        android:textColorHint="@color/tblue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <EditText
        android:id="@+id/pass"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:alpha=".7"
        android:background="@drawable/rounded"
        android:ems="10"
        android:fontFamily="@font/caviar_dreams"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/blue"
        android:textColorHint="@color/tblue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />


    <RadioButton
        android:id="@+id/customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="150dp"
        android:checked="true"
        android:fontFamily="@font/caviar_dreams"
        android:text="@string/customer"
        android:textColor="@color/blue"
        android:buttonTint="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <RadioButton
        android:id="@+id/owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/caviar_dreams"
        android:text="@string/owner"
        android:textColor="@color/blue"
        android:buttonTint="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="85dp"
        android:alpha=".7"
        android:background="@drawable/rounded_b"
        android:fontFamily="@font/caviar_dreams"
        android:text="Go!"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

</androidx.constraintlayout.widget.ConstraintLayout>