<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vblack"

    tools:context="com.liminal.project32.PremiseProfile">

    <ImageView
        android:id="@+id/menu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/menuIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:tint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="@+id/menu"
        app:layout_constraintStart_toStartOf="@+id/menu"
        app:layout_constraintTop_toTopOf="@+id/menu"
        app:srcCompat="@drawable/menu" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="125dp"
        android:onClick="pickImage"
        android:tint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image2" />

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caviar_dreams"
        android:text="@string/logo"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <ImageView
        android:id="@+id/landscape1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="70dp"
        android:tint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image2" />

    <TextView
        android:id="@+id/landscape1text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/caviar_dreams"
        android:text="@string/installations"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/landscape1"
        app:layout_constraintEnd_toEndOf="@+id/landscape1"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/landscape1" />

    <ImageView
        android:id="@+id/landscape2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="125dp"
        android:tint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landscape1"
        app:srcCompat="@drawable/image2" />

    <TextView
        android:id="@+id/landscape2text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caviar_dreams"
        android:text="@string/installations"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/landscape2"
        app:layout_constraintEnd_toEndOf="@+id/landscape2"
        app:layout_constraintStart_toStartOf="@+id/landscape2"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/landscape3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="5dp"
        android:tint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landscape1"
        app:srcCompat="@drawable/image2" />

    <TextView
        android:id="@+id/landscape3text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/caviar_dreams"
        android:text="@string/installations"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/landscape3"
        app:layout_constraintEnd_toEndOf="@+id/landscape3"
        app:layout_constraintStart_toEndOf="@+id/landscape2"
        app:layout_constraintTop_toBottomOf="@+id/landscape1" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="350dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:fontFamily="@font/caviar_dreams"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="@color/blue"
        android:textColorHint="@color/tblue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:fontFamily="@font/caviar_dreams"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/blue"
        android:textColorHint="@color/tblue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />


    <EditText
        android:id="@+id/pass"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:fontFamily="@font/caviar_dreams"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/blue"
        android:textColorHint="@color/tblue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/address"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:fontFamily="@font/caviar_dreams"
        android:gravity="center"
        android:hint="@string/address"
        android:inputType="text"
        android:textColor="@color/blue"
        android:textColorHint="@color/tblue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <Button
        android:id="@+id/editMenu"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_b"
        android:fontFamily="@font/caviar_dreams"
        android:onClick="editMenu"
        android:text="@string/edit_menu"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/getQR"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_b"
        android:fontFamily="@font/caviar_dreams"
        android:text="@string/request_QR"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMenu" />


</androidx.constraintlayout.widget.ConstraintLayout>